--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "curl": "^0.1.4",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "querystring": "^0.2.1"
   }
 }
