--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.8.1",
+    "@types/express": "^4.17.21",
     "axios": "^1.7.7",
     "curl": "^0.1.4",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "serverless-http": "^3.2.0"
   }
 }
